set config and bind data

--- a/app.json
+++ b/app.json
@@ -1,3 +1,29 @@
 {
-  "pages":["pages/about/about"]
+  "pages": [
+    "pages/weekly/weekly",
+    "pages/about/about"
+  ],
+  "tabBar": {
+    "list": [
+      {
+        "text": "每周推荐",
+        "pagePath": "pages/weekly/weekly",
+        "iconPath": "images/icons/weekly.png",
+        "selectedIconPath": "images/icons/weekly-selected.png"
+      },
+      {
+        "text": "关于",
+        "pagePath": "pages/about/about",
+        "iconPath": "images/icons/about.png",
+        "selectedIconPath": "images/icons/about-selected.png"
+      }
+    ],
+    "color": "#ccc",
+    "selectedColor":"#000"
+  },
+  "window":{
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText":"default title"
+  }
 }
